springboot-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-svc
spec:
  ports:
    - name: springboot-app-svc
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-ingress-demo
